@@ -1,0 +1,18 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: |
+    D. E. Zelmon, D. L. Small, D. Jundt.
+    Infrared corrected Sellmeier coefficients for congruently grown lithium niobate and 5 mol.% magnesium oxide-doped lithium niobate.
+    <a href="https://doi.org/10.1364/JOSAB.14.003319"><i>J. Opt. Soc. Am. B</i> <b>14</b>, 3319-3322 (1997)</a>
+COMMENTS: |
+    21 °C. Extraordinary ray (e). Congruently grown lithium niobate doped with 5 mol. % MgO.<br>
+    In the original publication, the ordinary and extraordinary Sellmeier coefficients appear to be interchanged. The coefficients are presented here with n<sub>o</sub> and n<sub>e</sub> swapped to match the measured dispersion and the known negative uniaxial behavior of MgO:LiNbO<sub>3</sub>.
+CONDITIONS:
+    temperature: 294
+    direction: e
+DATA:
+  - type: formula 2
+    wavelength_range: 0.4 5.0
+    coefficients: 0 2.2454 0.01242 1.3005 0.05313 6.8972 331.33
